--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "start": "env-cmd -f .env.local react-scripts start",
+    "start:local": "env-cmd -f .env.local react-scripts start",
     "start:uat": "env-cmd -f .env.uat react-scripts start",
     "start:prod": "env-cmd -f .env.prod react-scripts start",
     "build:uat": "env-cmd -f .env.uat react-scripts build",
     "build:prod": "env-cmd -f .env.prod react-scripts build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
