--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "scripts": {
     "start": "env-cmd -f .env.local react-scripts start",
     "start:local": "env-cmd -f .env.local react-scripts start",
-    "start:uat": "env-cmd -f .env.uat react-scripts start",
+    "start:qa": "env-cmd -f .env.qa react-scripts start",
     "start:prod": "env-cmd -f .env.prod react-scripts start",
-    "build:uat": "env-cmd -f .env.uat react-scripts build",
+    "build:qa": "env-cmd -f .env.qa react-scripts build",
     "build:prod": "env-cmd -f .env.prod react-scripts build",
     "build": "react-scripts build",
     "test": "react-scripts test",
