--- a/.env.qa
+++ b/.env.qa
@@ -3,5 +3,5 @@ REACT_APP_SSO_AWS_PROJECT_REGION=us-east-1
 REACT_APP_SSO_COGNITO_IDENTITY_POOL_ID=
 REACT_APP_SSO_USER_POOLS_ID=us-east-1_oEI2Mvl9M
 REACT_APP_SSO_USER_POOLS_WEB_CLIENT_ID=5860ge49itu9112qg2et09q0g
-REACT_APP_SSO_COGNITO_SIGNIN_REDIRECT_URL=https://d1vd5hmnzpbmnm.cloudfront.net/
-REACT_APP_SSO_COGNITO_SIGNOUT_REDIRECT_URL=https://d1vd5hmnzpbmnm.cloudfront.net/
+REACT_APP_SSO_COGNITO_SIGNIN_REDIRECT_URL=https://d2igdk9v65di7k.cloudfront.net/
+REACT_APP_SSO_COGNITO_SIGNOUT_REDIRECT_URL=https://d2igdk9v65di7k.cloudfront.net/
